# trading-simulator

./: .gitignore  CMakeLists.txt  README.md
core/: get_file_names.cpp  holding.cpp  holding.h  knapsack_solve.cpp  main.cpp  market.cpp  market.h  portfolio.cpp  portfolio.h  read_data.cpp  read_data.h  stock.cpp  stock.h
core/header/: get_file_names.h  knapsack_solve.h  portfolio.h  read_data.h  stock.h
data/: AAPL.csv  AMD.csv  BP.csv  META.csv  NVDA.csv
estimator/: SPY.csv  weights_estimator  weights_estimator.cpp  weights_result.txt
estimator/weights_estimator.dSYM/Contents/: Info.plist
estimator/weights_estimator.dSYM/Contents/Resources/DWARF/: weights_estimator
estimator/weights_estimator.dSYM/Contents/Resources/Relocations/aarch64/: weights_estimator.yml
